# engine-3d

./: .gitignore  _build_sphinx.bat  main2.py  pytest.ini  setup.cfg
docs/: conf.py  index.rst  release_notes.rst
docs/_static/: copybutton.js
docs/install/: index.rst
docs/uml/: plane.puml  world_2d_squares.puml
engine_3d/: Window.py  World.py  main2.py  player.py
engine_3d/bases/: PolygonBase.py
engine_3d/interfaces/: IShape.py  IWorld.py  Point.py
engine_3d/shapes/: Square.py  Triangle.py
tests/: test_Square.py  test_Window.py
