[metadata]
name = engine-3d
version = attr: engine_3d.__version__
description = 3D engine that manipulates objects in a virtual world
author = Yotam Maylat
author_email = yotammaylat@gmail.com
url = https://github.com/ioorik

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
install_requires =
    pygame

[options.packages.find]
include = engine_3d*


